--- a/src/titiler/mosaic/pyproject.toml
+++ b/src/titiler/mosaic/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
     "mercantile",
     "pystac-client~=0.6.0",
     "stac-pydantic~=2.0.3",
-    "morecantile>=2.1.4",  # 2.1.4 adds tilesetmatrix values, that tests depend on.also a transitive dep of cogeo-mosaic
+    "morecantile>=4.3,<5.0",
     "titiler.core==0.12.0",
     "cogeo-mosaic>=6.2,<7.0",
 ]
