--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -187,70 +187,70 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Login to Github
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Login to Github
+      #   uses: docker/login-action@v1
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set tag version
-        id: tag
-        # https://stackoverflow.com/questions/58177786/get-the-current-pushed-tag-in-github-actions
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
-      # Uvicorn
-      # Push `latest` when commiting to main
-      - name: Build and push uvicorn
-        if: github.ref == 'refs/heads/main'
-        uses: docker/build-push-action@v2
-        with:
-          # See https://github.com/developmentseed/titiler/discussions/387
-          platforms: linux/amd64
-          context: .
-          file: dockerfiles/Dockerfile.uvicorn
-          push: true
-          tags: |
-            ghcr.io/${{ github.repository }}-uvicorn:latest
+      # - name: Set tag version
+      #   id: tag
+      #   # https://stackoverflow.com/questions/58177786/get-the-current-pushed-tag-in-github-actions
+      #   run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+      # # Uvicorn
+      # # Push `latest` when commiting to main
+      # - name: Build and push uvicorn
+      #   if: github.ref == 'refs/heads/main'
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     # See https://github.com/developmentseed/titiler/discussions/387
+      #     platforms: linux/amd64
+      #     context: .
+      #     file: dockerfiles/Dockerfile.uvicorn
+      #     push: true
+      #     tags: |
+      #       ghcr.io/${{ github.repository }}-uvicorn:latest
 
-      # Push `{VERSION}` when pushing a new tag
-      - name: Build and push uvicorn
-        if: startsWith(github.event.ref, 'refs/tags') || github.event_name == 'release'
-        uses: docker/build-push-action@v2
-        with:
-          # See https://github.com/developmentseed/titiler/discussions/387
-          platforms: linux/amd64
-          context: .
-          file: dockerfiles/Dockerfile.uvicorn
-          push: true
-          tags: |
-            ghcr.io/${{ github.repository }}-uvicorn:${{ steps.tag.outputs.tag }}
+      # # Push `{VERSION}` when pushing a new tag
+      # - name: Build and push uvicorn
+      #   if: startsWith(github.event.ref, 'refs/tags') || github.event_name == 'release'
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     # See https://github.com/developmentseed/titiler/discussions/387
+      #     platforms: linux/amd64
+      #     context: .
+      #     file: dockerfiles/Dockerfile.uvicorn
+      #     push: true
+      #     tags: |
+      #       ghcr.io/${{ github.repository }}-uvicorn:${{ steps.tag.outputs.tag }}
 
-      # Gunicorn
-      # Push `latest` when commiting to main
-      - name: Build and push
-        if: github.ref == 'refs/heads/main'
-        uses: docker/build-push-action@v2
-        with:
-          # See https://github.com/developmentseed/titiler/discussions/387
-          platforms: linux/amd64
-          context: .
-          file: dockerfiles/Dockerfile.gunicorn
-          push: true
-          tags: |
-            ghcr.io/${{ github.repository }}:latest
+      # # Gunicorn
+      # # Push `latest` when commiting to main
+      # - name: Build and push
+      #   if: github.ref == 'refs/heads/main'
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     # See https://github.com/developmentseed/titiler/discussions/387
+      #     platforms: linux/amd64
+      #     context: .
+      #     file: dockerfiles/Dockerfile.gunicorn
+      #     push: true
+      #     tags: |
+      #       ghcr.io/${{ github.repository }}:latest
 
-      # Push `{VERSION}` when pushing a new tag
-      - name: Build and push
-        if: startsWith(github.event.ref, 'refs/tags') || github.event_name == 'release'
-        uses: docker/build-push-action@v2
-        with:
-          # See https://github.com/developmentseed/titiler/discussions/387
-          platforms: linux/amd64
-          context: .
-          file: dockerfiles/Dockerfile.gunicorn
-          push: true
-          tags: |
-            ghcr.io/${{ github.repository }}:${{ steps.tag.outputs.tag }}
+      # # Push `{VERSION}` when pushing a new tag
+      # - name: Build and push
+      #   if: startsWith(github.event.ref, 'refs/tags') || github.event_name == 'release'
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     # See https://github.com/developmentseed/titiler/discussions/387
+      #     platforms: linux/amd64
+      #     context: .
+      #     file: dockerfiles/Dockerfile.gunicorn
+      #     push: true
+      #     tags: |
+      #       ghcr.io/${{ github.repository }}:${{ steps.tag.outputs.tag }}
 
   deploy:
     needs: [tests, publish]
