--- a/src/titiler/extensions/pyproject.toml
+++ b/src/titiler/extensions/pyproject.toml
@@ -37,8 +37,8 @@ test = [
     "pytest",
     "pytest-cov",
     "pytest-asyncio",
+    "pystac[validation]~=1.8.4",
     "httpx",
-    "jsonschema>=3.0,<4.18.0",
 ]
 cogeo = [
     "rio-cogeo>=5.0,<6.0",
